# VR-Test-App

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/tech/joei/vr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/tech/joei/vr/: MainActivity.java
app/src/main/res/layout/: listview_item.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/layout-port/: activity_main.xml
app/src/main/res/values/: dimen.xml
app/src/main/res/values-large/: dimen.xml
app/src/test/java/tech/joei/vr/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
vr_mod_1/: CMakeLists.txt  build.gradle  proguard-rules.pro
vr_mod_1/src/androidTest/java/tech/joei/vr_mod_1/: ExampleInstrumentedTest.java
vr_mod_1/src/main/: AndroidManifest.xml
vr_mod_1/src/main/cpp/: main.cpp
vr_mod_1/src/main/java/tech/joei/vr_mod_1/: GLView.java
vr_mod_1/src/main/res/values/: strings.xml
vr_mod_1/src/test/java/tech/joei/vr_mod_1/: ExampleUnitTest.java
vr_mod_2/: CMakeLists.txt  build.gradle
vr_mod_2/src/androidTest/java/tech/joei/vr_mod_2/: ExampleInstrumentedTest.java
vr_mod_2/src/main/: AndroidManifest.xml
vr_mod_2/src/main/cpp/: vr_mod_2.cpp  vr_mod_2.h
vr_mod_2/src/main/res/values/: strings.xml
vr_mod_2/src/test/java/tech/joei/vr_mod_2/: ExampleUnitTest.java
